# models/attachment.go
@@ -13,8 +13,9 @@ import (
 
 	gouuid "github.com/satori/go.uuid"
 
-	"code.gitea.io/gitea/modules/setting"
 	"code.gitea.io/gitea/modules/util"
+	"code.gitea.io/gitea/modules/setting"
+	api "code.gitea.io/sdk/gitea"
 )
 
 // Attachment represent a attachment of issue/comment/release.
@@ -39,6 +40,19 @@ func (a *Attachment) IncreaseDownloadCount() error {
 	return nil
 }
 
+func (a *Attachment) APIFormat() *api.Attachment {
+	size, _ := a.Size()
+	return &api.Attachment{
+		ID: a.ID,
+		Name: a.Name,
+		Created: a.CreatedUnix.AsTime(),
+		DownloadCount: a.DownloadCount,
+		Size: size,
+		UUID: a.UUID,
+		DownloadURL: a.DownloadURL(),
+	}
+}
+
 // AttachmentLocalPath returns where attachment is stored in local file
 // system based on given UUID.
 func AttachmentLocalPath(uuid string) string {
@@ -48,6 +62,20 @@ func AttachmentLocalPath(uuid string) string {
 // LocalPath returns where attachment is stored in local file system.
 func (a *Attachment) LocalPath() string {
 	return AttachmentLocalPath(a.UUID)
+}
+
+// Size returns the file's size of the attachment
+func (a *Attachment) Size() (int64, error) {
+	fi, err := os.Stat(a.LocalPath())
+	if err != nil {
+		return 0, err
+	}
+	return fi.Size(), nil
+}
+
+// DownloadURL returns the download url of the attached file
+func (a *Attachment) DownloadURL()  string {
+	return fmt.Sprintf("%sattachments/%s", setting.AppURL, a.UUID)
 }
 
 // NewAttachment creates a new attachment object.
@@ -80,6 +108,23 @@ func NewAttachment(name string, buf []byte, file multipart.File) (_ *Attachment,
 
 	return attach, nil
 }
+
+// GetAttachmentByID returns attachment by given id
+func GetAttachmentByID(id int64) (*Attachment, error) {
+	return getAttachmentByID(x, id)
+}
+
+func getAttachmentByID(e Engine, id int64) (*Attachment, error) {
+	attach := &Attachment{ID: id}
+
+	if has, err := e.Get(attach); err != nil {
+		return nil, err
+	} else if !has {
+		return nil, ErrAttachmentNotExist{ID: id, UUID: ""}
+	}
+	return attach, nil
+}
+
 
 func getAttachmentByUUID(e Engine, uuid string) (*Attachment, error) {
 	attach := &Attachment{UUID: uuid}
